# symcount

./: Cargo.toml  LICENSE.md  test.txt
src/: bigrams.rs  lib.rs  main.rs
test-dir/: .gitignore  .ignore
